--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,58 @@
-.App {
-  font-family: sans-serif;
+* {
+  font-family: "Roboto", sans-serif;
   text-align: center;
 }
+
+.nav {
+  /*flexbox on homepage, should be centered in the future*/
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+
+  list-style: none;
+  margin: 0;
+  background: lightgoldenrodyellow;
+}
+
+.nav li {
+  /*specify link element and cancel the underline effect of each link*/
+  text-decoration: none;
+  display: block;
+  padding: 1em;
+  color: black;
+}
+
+.nav li:hover {
+  /*change background color when hovered*/
+  background: salmon;
+}
+
+span {
+  /*flexbox on homepage, should be centered in the future*/
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: flex-start;
+
+  list-style: none;
+  margin: 0;
+  background: lightgray;
+}
+
+h1 {
+  text-align: center;
+}
+
+h3 {
+  text-align: center;
+}
+/*is there better way to align these? can the same element be in multiple classes?*/
+
+@media all and (max-width: 800px) {
+  /*flex flow set to column wize for navigation bar*/
+  .homenav {
+    flex-flow: column wrap;
+    padding: 0;
+  }
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap");
